# claude-skills

./: .gitignore  LICENSE  README.md
agents/: curator.md
commands/: gemini-review.md  handoff.md  session-end.md
hooks/: auto-resume.sh  session-end-handoff.sh  session-end-nudge.sh
scripts/: refresh-anthropic-docs.sh  resolve-coord-dir.sh
skills/brag/: SKILL.md
skills/branch/: SKILL.md
skills/claude-code-best-practices/: SKILL.md
skills/codex/: SKILL.md  codex.sh
skills/codex-review/: SKILL.md  codex-review.sh  sev.schema.json
skills/curate/: SKILL.md
skills/evaluate/: SKILL.md  survey.sh
skills/fix-issue/: SKILL.md
skills/frontier-spend/: README.md  SKILL.md
skills/gemini-review/: SKILL.md
skills/get-reddit/: .gitignore  SKILL.md  get-reddit.mjs  get-reddit.sh  package.json
skills/github-review/: SKILL.md
skills/handoff/: SKILL.md
skills/idea/: SKILL.md  file-idea.sh
skills/llm-tools/: README.md  SKILL.md  config.example.toml  pyproject.toml
skills/llm-tools/scripts/: setup.sh
skills/llm-tools/src/llm_tools/: client.py  config.py
skills/llm-tools/src/llm_tools/cli/: ask.py  extract.py  write.py
skills/mock/: SKILL.md  template.html
skills/my-voice/: SKILL.md
skills/pickup/: SKILL.md
skills/review/: SKILL.md
skills/review-panel/: SKILL.md  merge.py  review-panel.sh
skills/session-end/: SKILL.md
skills/session-pause/: SKILL.md
skills/session-resume/: SKILL.md
skills/session-start/: SKILL.md
skills/sitrep/: SKILL.md
skills/sweep/: SKILL.md
skills/task-observer/: LICENSE.txt  SOURCE.md  USER-GUIDE.md
(+29 files in other folders)
